# PSForcer

./: .gitignore  CI_DENETIM.txt  CMakeLists.txt  IV0000-PSFC00001_00-PSFORCERCLIENT00.pkg.sha256  LICENSE  Makefile  README.md
.github/workflows/: build-pkg-release.yml  duzeltme-kodunu-uygula.yml  duzeltme-uygulayici-onar.yml  duzeltmeyi-uygula-son.yml  hf-401-onar.yml  hf-401-yama.yml  hf-baglanti-tani.yml  hf-boyut-denetimi.yml  kaynak-incele.yml  pt-medya-hazirla.yml  v014-durum.yml  v015-yayin-dogrula.yml  v016-diagnostic.yml  v016-kod-uygula-2.yml  v016-kod-uygula.yml  v016-ui-katalog.yml  v016-uygula.yml  v018-goto-onar.yml  v019-akis-onar.yml  v020-dali-onar.yml  v020-geri-sarma-onar.yml  v021-kalici-yazma-onar.yml  v022-cherry-pick.yml  (+6 more)
assets/: catalog.json  hf_token.txt  katalog_adresi.txt
catalog/: katalog.json
docs/: MANIFEST.md  PR12-FOLLOWUP.md  V022-LAST.md  V022-NOT.md  V022-OPEN-PR  V022-PR-2.md  V022-PR.md  indirme-cokmesi-inceleme.md
release/: durum-v014.json  durum-v015.json  durum.json  status.json
src/: App.cpp  App.h  AppBaslatma.cpp  AppDongu.cpp  AppIndirme.cpp  AppTypes.h  BootLog.h  Catalog.cpp  Catalog.h  DownloadManager.cpp  DownloadManager.h  FileUtil.cpp  FileUtil.h  HttpClient.cpp  HttpClient.h  HttpClientTurkce.cpp  HttpMessages.h  Installer.cpp  Installer.h  Json.cpp  Json.h  JsonTurkce.cpp  MediaCache.cpp  MediaCache.h  PixelFont.h  PkgHeader.cpp  PkgHeader.h  Sha256.cpp  Sha256.h  Ui.cpp  Ui.h  UiDetailV016.cpp  main.cpp
tests/: catalog_parser_test.cpp  download_manager_test.cpp  pkg_header_test.cpp
tools/: apply_v023.py  generate_assets.py  huggingface_dosya_bilgisi.py  v022_apply.py  v023_apply.py  validate_catalog.py
(+1 files in other folders)
